luau-types-re-export/src/snapshots/luau_types_re_export__tests__export_generic_type_with_generic_pack.snap
---
source: src/lib.rs
expression: result
---
local module = require('../packages/module')
export type Fn<R...> = module.Fn<R...>
return module

