luau-types-re-export/src/snapshots/luau_types_re_export__tests__export_generic_type_with_type_name_and_generic_pack.snap
---
source: src/lib.rs
expression: result
---
local module = require('../packages/module')
export type Fn<Arg, R...> = module.Fn<Arg, R...>
return module

