luau-types-re-export/src/snapshots/luau_types_re_export__tests__export_simple_generic_type.snap
---
source: src/lib.rs
expression: result
---
local module = require('../packages/module')
export type List<T> = module.List<T>
return module

