luau-types-re-export/src/snapshots/luau_types_re_export__tests__export_simple_generic_type_with_default_simple_array.snap
---
source: src/lib.rs
expression: result
---
local module = require('../packages/module')
export type List<T = { number }> = module.List<T>
return module
