luau-types-re-export/src/snapshots/luau_types_re_export__tests__export_simple_type_name.snap
---
source: src/lib.rs
expression: result
---
local module = require('../packages/module')
export type Value = module.Value
return module

